fixed overlap & and renamed elements

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -66,14 +66,6 @@
   
 }
 
-#lastMinuteSteps{
-  fill:white;
-   x: 1%; 
-  y: 67%;
-  font-size:25;
-  text-length:100;
-  
-}
 
 #battery {
   font-size: 20;
@@ -131,7 +123,7 @@
 
 
 /* BOTTOM 3rd ==================*/
-#lastMinuteCalories{ /* TODO : rename to previous minute calories */
+#prevMinuteCalories{ /* TODO : rename to previous minute calories */
     fill:#0000e6;
    x: 1%; 
   y: 60%;
@@ -139,7 +131,7 @@
   text-length:100;
 }
 
-#labelLastMinuteCalories{
+#labelPrevMinuteCalories{
     fill:white;
    x: 1%; 
   y: 63%;
@@ -150,10 +142,11 @@
 
 #calorieETA {
    fill: #4d4dff;
-   x: 50%; 
+   x: 45%; 
   y: 60%;
   font-size:30;
-  text-length:100;
+  
+  text-length:3000;
   
 }
 
